--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
+# dependencies
 node_modules
-
-# Output
-.output
-.vercel
-.netlify
-.wrangler
 /.svelte-kit
 /build
+/dist
+
+# env files
+.env
+.env.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # OS
 .DS_Store
-Thumbs.db
-
-# Env
-.env
-.env.*
-!.env.example
-!.env.test
-
-# Vite
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
