--- a/package.json
+++ b/package.json
@@ -11,26 +11,31 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"db:generate": "drizzle-kit generate:pg",
-		"db:migrate": "drizzle-kit migrate:pg"
+		"db:migrate": "drizzle-kit migrate:pg",
+		"add-admin": "tsx scripts/add-admin.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/postcss": "^4.1.13",
+		"@types/pg": "^8.15.5",
 		"autoprefixer": "^10.4.21",
 		"dotenv": "^17.2.2",
+		"drizzle-kit": "^0.31.4",
 		"postcss": "^8.5.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.13",
+		"tsx": "^4.20.5",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
 		"@auth/sveltekit": "^1.10.0",
+		"@types/bcryptjs": "^2.4.6",
 		"bcrypt": "^6.0.0",
-		"drizzle-kit": "^0.31.4",
+		"bcryptjs": "^3.0.2",
 		"drizzle-orm": "^0.44.5",
 		"pg": "^8.16.3"
 	}
