--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
 	"dependencies": {
 		"@auth/sveltekit": "^1.10.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/nodemailer": "^7.0.1",
 		"bcrypt": "^6.0.0",
 		"bcryptjs": "^3.0.2",
 		"drizzle-orm": "^0.44.5",
+		"nodemailer": "^6.10.1",
 		"pg": "^8.16.3"
 	}
 }
