Vercel AI SDK & Gemini API Key

--- a/env.example
+++ b/env.example
@@ -21,6 +21,9 @@ SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-16-character-app-password
 
+# AI Configuration - Gemini API
+GEMINI_API_KEY=your-gemini-api-key-here
+
 
 
 # Setup Instructions:
